--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "build:esm": "tsc -b tsconfig.esm.json && node scripts/esm-post-process.mjs",
     "build:cjs": "tsc -b tsconfig.cjs.json",
-    "build:umd": "rollup --bundleConfigAsCjs --config rollup.config.ts --configPlugin typescript && gzip umd/graphql-http.min.js -c > umd/graphql-http.min.js.gz",
+    "build:umd": "rollup --configPlugin typescript --config rollup.config.ts",
     "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
     "release": "semantic-release"
   },
@@ -128,6 +128,7 @@
     "node-fetch": "^3.3.0",
     "prettier": "^2.8.4",
     "rollup": "^3.14.0",
+    "rollup-plugin-gzip": "^3.1.0",
     "semantic-release": "^20.1.0",
     "tslib": "^2.5.0",
     "typedoc": "^0.23.24",
