--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-http",
   "version": "1.14.0",
-  "description": "Simple, pluggable, zero-dependency, GraphQL over HTTP Protocol compliant server and client",
+  "description": "Simple, pluggable, zero-dependency, GraphQL over HTTP spec compliant server, client and audit suite.",
   "keywords": [
     "graphql",
     "client",
