--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@types/eslint": "^8.21.0",
     "@types/express": "^4.17.17",
     "@types/glob": "^8.0.1",
+    "@types/html-validator": "^5.0.3",
     "@types/jest": "^29.4.0",
     "@types/koa": "^2.13.5",
     "@types/koa-mount": "^4.0.2",
@@ -121,6 +122,7 @@
     "express": "^4.18.2",
     "fastify": "^4.12.0",
     "graphql": "^16.6.0",
+    "html-validator": "^6.0.1",
     "jest": "^29.4.2",
     "jest-jasmine2": "^29.4.2",
     "koa": "^2.14.1",
