--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -25,7 +25,7 @@ jobs:
         run: yarn build:umd
       - name: Inject
         run: node scripts/inject-audits-website.mjs
-      - name: Upload
+      - name: Upload website
         uses: actions/upload-pages-artifact@v1
         with:
           path: website
