--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -136,7 +136,7 @@ jobs:
       - name: Audit
         run: node scripts/audit-implementation.mjs implementations/${{ matrix.workspace.name }}
       - name: Summary
-        run: cat implementations/${{ matrix.workspace }}/README.md >> $GITHUB_STEP_SUMMARY
+        run: cat implementations/${{ matrix.workspace.name }}/README.md >> $GITHUB_STEP_SUMMARY
       - name: Upload audit report
         uses: actions/upload-artifact@v3
         with:
