--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -63,10 +63,11 @@ jobs:
     strategy:
       matrix:
         workspace:
-          - hotchocolate
-          - postgraphile
-          - pioneer
           - deno
+          - hotchocolate
+          - lighthouse
+          - pioneer
+          - postgraphile
     env:
       PORT: 4000
     steps:
@@ -92,7 +93,7 @@ jobs:
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
       - name: Start
-        run: yarn workspace ${{ matrix.workspace }} start -d --wait
+        run: yarn workspace ${{ matrix.workspace }} start --detach --wait
       - name: Audit
         run: node scripts/audit-implementation.mjs implementations/${{ matrix.workspace }}
       - name: Summary
