--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
   "scripts": {
     "gendocs": "typedoc --options typedoc.js src/",
     "lint:eslint": "eslint 'src'",
-    "lint:prettier": "prettier -c .",
+    "lint:prettier": "prettier --check .",
+    "lint:fix": "yarn lint:eslint --fix && prettier --write .",
     "lint": "yarn lint:eslint && yarn lint:prettier",
     "type-check": "tsc --noEmit",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest",
