--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -154,7 +154,8 @@ jobs:
     name: Report
     runs-on: ubuntu-latest
     if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
-    needs: [javascript, docker, url]
+    # needs: [javascript, docker, url]
+    needs: [url]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
