--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -28,6 +28,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.head_ref }}
       - name: Set up node
         uses: actions/setup-node@v3
         with:
@@ -72,6 +75,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.head_ref }}
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v2
       - name: Set up node
@@ -124,6 +130,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.head_ref }}
       - name: Set up node
         uses: actions/setup-node@v3
         with:
@@ -160,7 +169,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
+          ref: ${{ github.head_ref }}
       - name: Download audit reports
         uses: actions/download-artifact@v3
         with:
