--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "eslint-config-prettier": "^8.8.0",
     "express": "^4.18.2",
     "fastify": "^4.15.0",
+    "glob": "^9.3.2",
     "graphql": "^16.6.0",
     "html-validator": "^6.0.1",
     "jest": "^29.5.0",
