--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -68,6 +68,7 @@ jobs:
         workspace:
           - deno
           - hotchocolate
+          - lighthouse
           - pioneer
           - postgraphile
     env:
