--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "@types/glob": "^8.1.0",
     "@types/html-validator": "^5.0.3",
     "@types/jest": "^29.5.2",
+    "@types/k6": "^0.44.2",
     "@types/koa": "^2.13.6",
     "@types/koa-mount": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
