--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
   "include": [
     "src",
     "scripts",
+    "benchmark",
     "rollup.config.ts",
     "babel.config.js",
     "jest.config.js",
