--- a/package.json
+++ b/package.json
@@ -147,7 +147,8 @@
     "tslib": "^2.5.2",
     "typedoc": "^0.24.7",
     "typedoc-plugin-markdown": "^3.15.3",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "uWebSockets.js": "uNetworking/uWebSockets.js#v20.30.0"
   },
   "resolutions": {
     "npm/libnpmversion": "^3.0.6"
