--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -126,6 +126,34 @@ jobs:
           cat summary.json >> $GITHUB_STEP_SUMMARY
           echo -e '\n```' >> $GITHUB_STEP_SUMMARY
 
+  uWebSockets:
+    name: uWebSockets
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: yarn
+      - name: Install
+        run: yarn install --immutable
+      - name: Download k6
+        run: |
+          curl https://github.com/grafana/k6/releases/download/${{ env.K6_VERSION }}/k6-${{ env.K6_VERSION }}-linux-amd64.tar.gz -L | tar xvz --strip-components 1
+      - name: Build
+        run: yarn run build:esm
+      - name: Run
+        run: node benchmark/servers/uWebSockets.mjs &
+      - name: Benchmark
+        run: ./k6 run benchmark/k6.mjs --summary-export summary.json
+      - name: Summary
+        run: |
+          echo '```json' >> $GITHUB_STEP_SUMMARY
+          cat summary.json >> $GITHUB_STEP_SUMMARY
+          echo -e '\n```' >> $GITHUB_STEP_SUMMARY
+
   deno:
     name: deno
     runs-on: ubuntu-latest
