--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "check:lint": "eslint 'src'",
     "check:type": "tsc --noEmit",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest",
-    "build:esm": "tsc -b tsconfig.esm.json && node scripts/esm-post-process.mjs",
+    "build:esm": "tsc -b tsconfig.esm.json && tsx scripts/esm-post-process.ts",
     "build:cjs": "tsc -b tsconfig.cjs.json",
     "build:umd": "rollup --configPlugin typescript --config rollup.config.ts",
     "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
@@ -150,6 +150,7 @@
     "rollup-plugin-gzip": "^3.1.0",
     "semantic-release": "^21.0.7",
     "tslib": "^2.6.0",
+    "tsx": "^3.12.7",
     "typedoc": "^0.24.8",
     "typedoc-plugin-markdown": "^3.15.3",
     "typescript": "^5.1.6",
