chore: check spelling too

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         check:
           - format
           - lint
+          - spell
           - type
     name: Check ${{ matrix.check }}
     runs-on: ubuntu-latest
