--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "check:format": "prettier --check .",
     "format": "yarn check:format --write",
     "check:lint": "eslint 'src'",
+    "check:spell": "cspell --gitignore **/*.md",
     "check:type": "tsc --noEmit",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest",
     "build:esm": "tsc -b tsconfig.esm.json && tsx scripts/esm-post-process.ts",
@@ -117,6 +118,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.22.6",
     "@babel/preset-typescript": "^7.22.5",
+    "@cspell/cspell-types": "^6.31.1",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.2",
     "@semantic-release/changelog": "^6.0.3",
@@ -133,6 +135,7 @@
     "@typescript-eslint/parser": "^5.61.0",
     "@whatwg-node/fetch": "^0.9.7",
     "babel-jest": "^29.6.0",
+    "cspell": "^6.31.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "express": "^4.18.2",
