--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "babel.config.js",
     "jest.config.js",
     ".eslintrc.js",
-    "typedoc.js"
+    "typedoc.js",
+    "cspell.config.js"
   ]
 }
