refactor(tests): use vitest (#101)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,10 @@
   },
   "include": [
     "src",
+    "tests",
     "scripts",
     "benchmark",
     "rollup.config.ts",
-    "babel.config.js",
-    "jest.config.js",
     ".eslintrc.js",
     "typedoc.js",
     "cspell.config.js"
