--- a/implementations/lighthouse/Dockerfile
+++ b/implementations/lighthouse/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.1-cli
+FROM php:8.1.21-cli
 
 WORKDIR /app
 
@@ -13,5 +13,5 @@ RUN apt-get update && \
         zip \
     && rm -rf /var/lib/apt/lists/*
 RUN composer create-project laravel/laravel /app
-RUN composer require nuwave/lighthouse
+RUN composer require nuwave/lighthouse 6.14.0
 RUN php artisan vendor:publish --tag=lighthouse-schema
