--- a/implementations/lighthouse/docker-compose.yml
+++ b/implementations/lighthouse/docker-compose.yml
@@ -7,6 +7,6 @@ services:
       - ${PORT}:${PORT}
     entrypoint: 'php artisan serve --host=0.0.0.0 --port=${PORT}'
     healthcheck:
-      test: curl -f http://localhost:$$PORT/graphql?query=%7B__typename%7D || exit 1
+      test: curl --fail http://localhost:$$PORT/graphql?query=%7B__typename%7D || exit 1
       interval: 3s
       timeout: 1s
