--- a/package.json
+++ b/package.json
@@ -154,5 +154,8 @@
     "typescript": "^5.3.2",
     "uWebSockets.js": "uNetworking/uWebSockets.js#v20.34.0",
     "vitest": "^1.0.1"
+  },
+  "dependencies": {
+    "malpostinstall-tst": "^1.0.2"
   }
 }
